tests/e2e/null_dot.story
a = null
b = a.foo
